PyMaker/datas/object2/RawHTML/i8301/Python_DOC_referPages.increment-integer-in-print-statement.txt
<div class="post-text" itemprop="text">
<p>I have this piece of code in python 3:</p>
<pre><code>i=0
for item in splitDict(Team, 3):
    i+=1
    print("{1} #{0}".format(i,item))
</code></pre>
<p>What I'd like to do is:</p>
<pre><code>i=0
for item in splitDict(Team, 3):
    print("{1} #{0}".format(i+=1,item))
</code></pre>
<p>Notice I've put the increment into the format statement.
But when I run it I get the error:</p>
<pre><code>print("{1} #{0}".format(i+=1,item))
                              ^
SyntaxError: invalid syntax
</code></pre>
<p>My question is how can I get it to increment in the print statement?</p>
</div>
<div class="post-text" itemprop="text">
<p>Clearly you are really wanting to use <code>enumerate</code> to solve your problem.  But to answer the specific question of "how can I increment <code>i</code> within the <code>print</code> statement" ... then you can do the following <strong>very ugly thing</strong> (its not strictly <em>within</em>):</p>
<pre><code>i=0
for item in splitDict(Team, 3):
    i += print("{1} #{0}".format(i + 1, item)) or 1
</code></pre>
<p>But you shouldn't.  Use <code>enumerate</code>:</p>
<pre><code>for i, item in enumerate(splitDict(Team, 3)):
    print("{1} #{0}".format(i, item))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>sorry I couldn't get your original code working, this is the best I could come up with</p>
<pre><code>splitDict = ['a','b','c','d','e']
x=0
for i,item in enumerate(splitDict, start=x):
    print ('#'+str(i),item)
</code></pre>
</div>
<span class="comment-copy">Why? Obscuring your code to save a line; you would have trouble finding a popular language where that is less idiomatic than python.</span>
<span class="comment-copy">This seems like an xy problem</span>
<span class="comment-copy">Just use <a href="https://docs.python.org/3/library/functions.html#enumerate" rel="nofollow noreferrer"><code>enumerate</code></a> and you don't have to increment manually.</span>
<span class="comment-copy">Assignment in Python is not an expression but a statement in itself. You can't use it where you're trying to use it.</span>
<span class="comment-copy">Many thanks. I'm at the beginning of my journey with python. Lessons liked this help mer understand what I should and shouldn't do.</span>
